[gd_scene load_steps=2 format=3 uid="uid://bhan4jr3ia0k"]

[ext_resource type="Script" uid="uid://biadilyqdm8q4" path="res://Hitbox&HurtBox/hurt_box.gd" id="1_wmin2"]

[node name="HurtBox" type="Area2D"]
script = ExtResource("1_wmin2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invincibility_ended" from="." to="." method="_on_invincibility_ended"]
[connection signal="invisibility_started" from="." to="." method="_on_invisibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
